restructing project and adding Makefile

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,11 +8,13 @@
             "-fdiagnostics-color=always",
             "-g",
             // ".\\*.cpp",
-            ".\\ReadCSV.cpp",
-            ".\\Map.cpp",
-            ".\\mapObj.h",
+            ".\\src\\main.cpp",
+            ".\\src\\EventSink\\EventSink.cpp",
+            ".\\src\\Mapper\\Map.cpp",
+            ".\\src\\Reader\\ReadCSV.cpp",
+            ".\\src\\Writer\\WriteCSV.cpp",
             "-o",
-            "main.exe",
+            "bin\\main.exe",
             "-lole32",
             "-loleaut32",
             "-lws2_32",
