--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,6 +60,23 @@
         "cstring": "cpp"
     }
     // ,"C_Cpp.default.cppStandard": "c++20"
-    ,"editor.tabSize": 4,
-
+    ,"editor.tabSize": 4
+    ,"makefile.configurations": [
+        {
+            "name": "Default",
+            "makeArgs": []
+        },
+        {
+            "name": "clean",
+            "makeArgs": ["clean"]
+        }
+    ],
+    "makefile.launchConfigurations": [
+        {
+            "cwd": "d:\\Workspace\\WindowsProcessMonitoring\\ReceivingEventNotifications\\bin",
+            "binaryPath": "d:\\Workspace\\WindowsProcessMonitoring\\ReceivingEventNotifications\\bin\\main.exe",
+            "binaryArgs": []
+        }
+    ],
+    "makefile.buildLog": ""
 }
