--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,31 @@
     "version": "0.2.0",
     "configurations": [
           {
-            "name": "g++ build & run active file",
+            "name": "g++ build & run project",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}\\main.exe",
+            "program": "${workspaceFolder}\\bin\\main.exe",
+            "args": [ "config/main.json" ],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": true, //set to true to see output in cmd instead
+            "MIMode": "gdb",
+            "miDebuggerPath": "D:\\msys64\\mingw64\\bin\\gdb.exe",
+            "setupCommands": [
+              {
+                "description": "Enable pretty-printing for gdb",
+                "text": "-enable-pretty-printing",
+                "ignoreFailures": true
+              }
+            ],
+            "preLaunchTask": "g++ build & run project"
+          },
+          {
+            "name": "g++ build & run tests",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}\\bin\\test.exe",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
@@ -23,7 +44,7 @@
                 "ignoreFailures": true
               }
             ],
-            "preLaunchTask": "g++ build & run active file"
+            "preLaunchTask": "g++ build & run tests"
           }
     ]
 }
