adding stacktrace for exceptions and fixing command line arguments usage

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -92,7 +92,7 @@
         {
             "cwd": "d:\\Workspace\\WindowsProcessMonitoring\\ReceivingEventNotifications\\bin",
             "binaryPath": "d:\\Workspace\\WindowsProcessMonitoring\\ReceivingEventNotifications\\bin\\main.exe",
-            "binaryArgs": []
+            "binaryArgs": ["d:\\Workspace\\WindowsProcessMonitoring\\ReceivingEventNotifications\\config\\main.json"]
         },
         {
             "cwd": "d:\\Workspace\\WindowsProcessMonitoring\\ReceivingEventNotifications\\bin",
