--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -16,6 +16,7 @@
             ".\\src\\WriteCSV.cpp",
             "-o",
             "bin\\main.exe",
+            "config\\main.json",
             "-lole32",
             "-loleaut32",
             "-lws2_32",
@@ -24,7 +25,7 @@
             "-std=c++20"
         ],
         "options": {
-            "cwd": "${fileDirname}"
+            "cwd": "${fileDirname}\\..\\"
         },
         "problemMatcher": [
           "$gcc"
@@ -56,7 +57,7 @@
             "-std=c++20"
         ],
         "options": {
-            "cwd": "${workspaceFolder}"
+            "cwd": "${workspaceFolder}\\..\\"
         },
         "problemMatcher": [
           "$gcc"
