moce os idetification to Makefile, and created Collect class instead of main function

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,6 +9,8 @@
             "-g",
             "-Iinclude",
             // ".\\*.cpp",
+            ".\\src\\Config.cpp",
+            ".\\src\\WCollect.cpp",
             ".\\src\\main.cpp",
             ".\\src\\EventSink.cpp",
             ".\\src\\Mapper.cpp",
