chage using queue to deque

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -72,7 +72,7 @@
         "climits": "cpp",
         "ios": "cpp",
         "locale": "cpp",
-        "queue": "cpp",
+        "deque": "cpp",
         "stack": "cpp",
         "source_location": "cpp",
         "stacktrace": "cpp",
